<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, BarCodeTestActivity!</string>
    <string name="app_name">运维管理系统</string>
    <string name="activity_name">运维管理系统</string>
    <string name="app_name1">平安电气巡检</string>
    <string name="activity_name1">平安电气巡检</string>
    <string name="normalscan_name">普通扫描</string>
    <string name="patrolscan_name">巡检扫描</string>
    <string name="scanresult_name">扫描结果：</string>
    <string name="showtext_name">显示文本</string>
    <string name="settings">设 置</string>
    <string name="device_number">设备号:    </string>
    <string name="device_user">使用者:  </string>
    <string name="device_datetime">有效期:    </string>
    <string name="share">分享</string>
    <string name="action_settings">设 置</string>
    <string name="camera_text">请 扫 码 ！</string>
    <string name="cancel_text">取 消 </string>
    <string name="back">返回 </string>
    <string name="www_url">网址          http://t.tipass.com</string>
    <string name="device_location">GPS定位</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="relocation">重新定位</string>
    <string name="lbs_baidu_location">LBS定位</string>
    <string name="version_update">版本检测更新</string>
    <string name="tipass_name">物联网互通系统</string>
    <string name="patrol">巡检</string>
    <string name="repair">报修</string>
    <string name="message">消息</string>
    <string name="mine">我的</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="ID">编号：</string>
    <string name="ClientNo">客户端标识：</string>
    <string name="ValidFrom">有效期开始：</string>
    <string name="ValidTo">有效期结束：</string>
    <string name="user_id">用户编号：</string>
    <string name="description">用户姓名：</string>
    <string name="title_activity_fragment_tab">FragmentTab</string>
    <string name="version">版本号：1.0</string>
    <string name="nfcstr">正在读取NFC信息 . . .</string>

</resources>